fix: height of dialog elements collapsed to 0 in Safari

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -91,7 +91,7 @@ dialog {
 
     .dialog_frame {
         position: relative;
-        height: 100%;
+        // height: 100%;
         display: flex; // Needs to be flex in order to not have to set an explicit height on dialog, do not remove
         flex-direction: column; // crucial for scrolling behavior to work properly
         max-height: inherit; // crucial for scrolling behavior to work properly
